---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/show.sql
---
SOURCE_FILE
  SHOW
    SHOW_KW "show"
    WHITESPACE " "
    TIME_ZONE
      TIME_KW "time"
      WHITESPACE " "
      ZONE_KW "zone"
    SEMICOLON ";"
  WHITESPACE "\n"
  SHOW
    SHOW_KW "show"
    WHITESPACE " "
    TRANSACTION_ISOLATION_LEVEL
      TRANSACTION_KW "transaction"
      WHITESPACE " "
      ISOLATION_KW "isolation"
      WHITESPACE " "
      LEVEL_KW "level"
    SEMICOLON ";"
  WHITESPACE "\n"
  SHOW
    SHOW_KW "show"
    WHITESPACE " "
    SESSION_AUTHORIZATION
      SESSION_KW "session"
      WHITESPACE " "
      AUTHORIZATION_KW "authorization"
    SEMICOLON ";"
  WHITESPACE "\n"
  SHOW
    SHOW_KW "show"
    WHITESPACE " "
    ALL
      ALL_KW "all"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  SHOW
    SHOW_KW "show"
    WHITESPACE " "
    CONFIG_PARAMETER_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "v"
    SEMICOLON ";"
  WHITESPACE "\n"
  SHOW
    SHOW_KW "show"
    WHITESPACE " "
    CONFIG_PARAMETER_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "a"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "b"
    SEMICOLON ";"
  WHITESPACE "\n"
  SHOW
    SHOW_KW "show"
    WHITESPACE " "
    CONFIG_PARAMETER_REF
      PATH_REF
        PATH_REF
          PATH_REF
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "a"
            DOT "."
            PATH_SEGMENT_REF
              IDENT "b"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "c"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "d"
    SEMICOLON ";"
  WHITESPACE "\n"
